/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package basecrdt;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.basecrdt.proto";
option optimize_for = SPEED;

message SingleDot{
  bytes replicaId = 1;
  uint64 ver = 2;
}

message SingleValue{
  bytes replicaId = 1;
  uint64 ver = 2;
  bytes value = 3;
}

message SingleMap{
  bytes key = 1;
  StateLattice val = 2;
}

message StateLattice{
  oneof StateType{
    SingleDot singleDot = 1;
    SingleValue  singleValue = 2;
    SingleMap singleMap = 3;
  }
}

message Dot{
  bytes replicaId = 1;
  uint64 ver = 2;
  optional StateLattice lattice = 3;
}
message Replacement{
  repeated Dot dots = 1; // dots in replacing order
}